--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
 
 <div class="container" style="padding-top: 50px;">
+	<span>this is the home page!</span>
 	<a href="clock.html">Show Clock</a>
 </div>
 
