--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 
 <div class="container" style="padding-top: 50px;">
-	<a href="/clock/index.html">Show Clock</a>
+	<a href="/clock/index.html">Show Clock in click folder!</a>
 </div>
 
 </body>
